# ai-nichefinder

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.codex/: config.toml
.codex/agents/: coder.toml
.platform/: ACTIVATE.md  STATUS.md  architecture.md  repos.md  workflow.md
.platform/agents/: commands.md  skill-labels.md  usage-tracking.md  work-tracking.md
.platform/conventions/: api.md  cli.md  data-sources.md  deployment.md  python.md  security.md  testing.md
.platform/domains/: viewer.md  (+10 more)
apps/cli/: pyproject.toml
apps/cli/src/nichefinder_cli/: __init__.py  free_validation.py  main.py  research_output.py  runtime.py  viewer_actions.py  viewer_data.py  viewer_jobs.py  viewer_profile_data.py  viewer_server.py  workflows.py
apps/cli/src/nichefinder_cli/commands/: briefs.py  db.py  keywords.py  monitor.py  ranks.py  status.py  viewer.py
data/: site_config.json
docs/: architecture.md  cli-cheatsheet.md  dashboard-layout-pattern.md  google-ads-api-design-review.txt  missing-seo-data-sources-explained.md  scoring-cheatsheet.md  seo-platform-gap-analysis-roadmap.md  setup-checklist.md
infra/: docker-compose.yml
tests/: __init__.py  test_cli_phase1.py  test_cli_publish.py  test_competitor_agent.py  test_content_agent.py  test_db_migrations.py  test_graph.py  test_gsc_client.py  test_keyword_agent.py  test_monitoring_records.py  test_serp_agent.py  test_serp_signals.py  test_sources.py  test_synthesis_agent.py  test_viewer_data.py  test_viewer_profile_data.py  test_viewer_server.py
(+197 files in other folders)
