[project]
name = "nichefinder-cli"
version = "0.1.0"
description = "CLI workflows for AI Nichefinder."
readme = "../../README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "nichefinder-core",
  "nichefinder-db",
  "rich>=14.1.0",
  "typer>=0.16.0",
]

[project.scripts]
nichefinder = "nichefinder_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nichefinder_cli"]

[tool.uv.sources]
nichefinder-core = { workspace = true }
nichefinder-db = { workspace = true }
